# functorsys-blog

./: CLAUDE.md  README.md  flake.nix  justfile  tailwind.config.js  website.cabal
.github/workflows/: pages.yml
css/: main.css
posts/: hello-world-2.typ  hello-world.typ  postscript-on-hackmit.typ  universal-constructions.typ
root/: 404.typ  about.typ
src/: Compilers.hs  Constants.hs  Main.hs  Templates.hs  Utils.hs
typst/pkgs/html-shim/0.1.0/: main.typ  typst.toml
